# ChangeLog for sys-kernel/hardened-sources
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.1248 2015/04/15 18:49:42 blueness Exp $

*hardened-sources-3.19.4 (15 Apr 2015)

  15 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.19.4.ebuild:
  vanilla-3.19.4 + genpatches-3.19-4 + grsecurity-3.1-3.19.4-201504142300

*hardened-sources-3.14.38 (15 Apr 2015)

  15 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.14.38.ebuild:
  vanilla-3.14.38 + genpatches-3.14-42 + grsecurity-3.1-3.14.38-201504142259

*hardened-sources-3.2.68-r5 (15 Apr 2015)

  15 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.68-r5.ebuild:
  vanilla-3.2.68 + genpatches-3.2-16 + grsecurity-3.1-3.2.68-201504142258

*hardened-sources-3.19.3-r1 (07 Apr 2015)

  07 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.19.3-r1.ebuild:
  vanilla-3.19.3 + genpatches-3.19-3 + grsecurity-3.1-3.19.3-201504021826

*hardened-sources-3.14.37-r1 (07 Apr 2015)

  07 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.14.37-r1.ebuild:
  vanilla-3.14.37 + genpatches-3.14-41 + grsecurity-3.1-3.14.37-201504051405

*hardened-sources-3.2.68-r4 (07 Apr 2015)

  07 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.2.68-r4.ebuild:
  vanilla-3.2.68 + genpatches-3.2-16 + grsecurity-3.1-3.2.68-201504021823

*hardened-sources-3.19.3 (28 Mar 2015)

  28 Mar 2015; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.19.3.ebuild:
  vanilla-3.19.3 + genpatches-3.19-3 + grsecurity-3.1-3.19.3-201503270049

*hardened-sources-3.14.37 (28 Mar 2015)

  28 Mar 2015; Anthony G. Basile <blueness@gentoo.org>
  +hardened-sources-3.14.37.ebuild:
  vanilla-3.14.37 + genpatches-3.14-41 + grsecurity-3.1-3.14.37-201503270048

  26 Mar 2015; Anthony G. Basile <blueness@gentoo.org>